$Id$

****************************** DRUPAL 5 BRANCH ********************************

September 25, 2008
------------------
#312602 by Michelle, merlinofchaos: Fixed broken query for counting the unread comments in a forum.

September 24, 2008
------------------
#306633 by Michelle: Added more icons.
#291084 by halkeye: Cleared options before collapsable container setting.
NOISSUE by waawaamilk: Fixed bug with counting forums in forum list preprocess.
#306633 by Michelle: Renamed most of the icons for a more consistant naming and replaced some.

September 18, 2008
------------------
#310547 by Michelle: Added 'hidden options' to settings page as well as other work on the settings page. This also necessitated a change to the collapsable container code.

September 17, 2008
------------------
#291084 by cridenour: More work on the collapsable forum containers: setting initial state and remembering state.

September 16, 2008
------------------
#309066 by asxnot: Fixed PHP 4 issue with forum list icons.
#291084 by Michelle: Minor tweak to placement of +/- icon.

September 14, 2008
------------------
#291084 by grn, Michelle: More fixes for collapsable containers.
#303542 by Michelle: Updated README.txt
#299258 by Michelle: Documented icon sources.

September 13, 2008
------------------
#291084 by grn, Michelle: grn dded initial jquery to make collapsable containers work. Michelle added the PHP to set the classes.
#303556 by alpritt: Fixed no background showing in header on forum icon column.
NOISSUE by Michelle: Changed jump to first reply on top of forum nodes to show total replies as well.
#303556 by Michelle: Fixed issue with topic list header.

September 7, 2008
-----------------
NOISSUE by Michelle: Cleaned up user info .tpl and modules that feed it.
#303799 by Michelle: Moved folder icons into their own column. Also cleaned up forum list tpl.
#303799 by Michelle: Fixed issue with indenting when no containers.

September 2, 2008
-----------------