@@ -172,8 +172,12 @@ see advanced_forum-structure.css.
   border: 1px solid #2587C4;
 }
 
-.forum-comment-left .username {
-  font-size: 1.1em;
+.forum-comment-left {
+  border-right: 2px solid #F7F5EE;
+}
+
+.forum-comment-left .author-name {
+  font-size: 120%;
   font-weight: bold;
 }
 
@@ -182,7 +186,7 @@ see advanced_forum-structure.css.
 	background: White;
 }
 
-.forum-fomment-left .user-info-label {
+.forum-comment-left .author-info-label {
   font-weight: bold;
 }
 
